customer_db_app/getcustomer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: getcustomer
    app.kubernetes.io/component: getcustomer
    app.kubernetes.io/instance: getcustomer
  name: getcustomer
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      deployment: getcustomer
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        deployment: getcustomer
    spec:
      containers:
      - envFrom:
        - secretRef:
            name: mysql
        image: quay.io/rhn_support_algonzal/getcustomer:1.0
        imagePullPolicy: IfNotPresent
        name: getcustomer
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
