customer_db_app/mvccustomer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mvccustomer
    app.kubernetes.io/component: mvccustomer
    app.kubernetes.io/instance: mvccustomer
  name: mvccustomer
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      deployment: mvccustomer
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        deployment: mvccustomer
    spec:
      containers:
      - env:
        - name: GET_CUSTOMER_SUMMARY_LIST_URI
          value: http://getcustomersummarylist:8080/customers
        - name: GET_CUSTOMER_URI
          value: http://getcustomer:8080/customer
        image: quay.io/donschenck/mvccustomer@sha256:7291917d278c74ecc238c5dfaf0827772818ce3cbd2340ae3af8c223d0f29ea9
        imagePullPolicy: IfNotPresent
        name: mvccustomer
        ports:
        - containerPort: 5000
          protocol: TCP
        - containerPort: 5001
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
