customer_db_app/getcustomer-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: getcustomer
    app.kubernetes.io/component: getcustomer
    app.kubernetes.io/instance: getcustomer
  name: getcustomer
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    deployment: getcustomer
  sessionAffinity: None
  type: ClusterIP
