customer_db_app/getcustomersummarylist-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: getcustomersummarylist
    app.kubernetes.io/component: getcustomersummarylist
    app.kubernetes.io/instance: getcustomersummarylist
  name: getcustomersummarylist
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    deployment: getcustomersummarylist
  sessionAffinity: None
  type: ClusterIP
