customer_db_app/mvccustomer-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mvccustomer
    app.kubernetes.io/component: mvccustomer
    app.kubernetes.io/instance: mvccustomer
  name: mvccustomer
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: 5000-tcp
    port: 5000
    protocol: TCP
    targetPort: 5000
  - name: 5001-tcp
    port: 5001
    protocol: TCP
    targetPort: 5001
  selector:
    deployment: mvccustomer
  sessionAffinity: None
  type: ClusterIP
